# pico-ducky-rs

./: Cargo.toml  Dockerfile  README.org
.cargo/: config
src/: keymap.rs  main.rs
